--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "test": "ng test",
-    "build": "ng build"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
